feat: make gallery homepage operator configurable
